fix(home): consistent jumbotron spacing
Closes #310.

--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -12,4 +12,9 @@
   .col-md-2-4 {
     @include make-md-column(2.4);
   }
+  .jumbotron {
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+  }
 }
